--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/slider_3.jpg" class="d-block w-100" alt="Photo des mariés">
+				<img src="./assets/images/slider/slider_3.webp" class="d-block w-100" alt="Photo des mariés">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/slider_2.jpg" class="d-block w-100" alt="Photo d'une fosse dans un concert">
+				<img src="./assets/images/slider/slider_2.webp" class="d-block w-100" alt="Photo d'une fosse dans un concert">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/slider_1.jpg" class="d-block w-100" alt="Photo d'une personne traversant un passage piéton">
+				<img src="./assets/images/slider/slider_1.webp" class="d-block w-100" alt="Photo d'une personne traversant un passage piéton">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -59,7 +59,7 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png" alt="Photo de Nina">
+		<img src="./assets/images/Nina.webp" alt="Photo de Nina">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -72,15 +72,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert_2.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali_morshedlou.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason_goodman.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage_2.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_2.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariage_1.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_1.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert_1.jpg" alt="Photo prise par Nina"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus_campos.jpg" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/Concert_2.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/Ali_Morshedlou_1.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/Jason_Goodman_1.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/Mariage_2.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/Portrait_2.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/Mariage_1.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/Portrait_1.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/Concert_1.webp" alt="Photo prise par Nina"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/Mateus_Campos_1.webp" alt="Photo prise par Nina"/>
 		</div>
 	</div>
 	<div class="quote">
