--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png" alt="Image représentant un appareil photo">
+			<img src="./assets/images/camera.webp" alt="Image représentant un appareil photo">
 		</div>
 	</div>
 </div>
